# TryingCompilers

./: .gitignore  CMakeLists.txt  main.c  meson.build
FirstBinary/: CMakeLists.txt  Makefile  meson.build
FirstBinary/FirstModule1/: CMakeLists.txt  FirstModule1.c  meson.build
FirstModule1/: CMakeLists.txt  FirstModule1.c  FirstModule1_exports.h
Module1/: CMakeLists.txt  Module1.c  Module1_exports.h
SecondModule2/: SecondModule2.c
